Fix where close button was not visible when viewed on mobile

--- a/src/app/components/user-details/user-details.css
+++ b/src/app/components/user-details/user-details.css
@@ -58,6 +58,7 @@
   #user-details {
     top: 10%;
     min-width: 30%;
+    width: auto;
   }
 
   #user-details img {
